# myCUDA

./: CMakeLists.txt  README.md  build.sh  cpp_wrapper.cpp  python_wrapper.py  setup.py
reports/: k01_rep_4092.ncu-rep  k02_rep_4092_2dgrid.ncu-rep
src/kernels/: kernels.cuh
src/kernels/FA2/: flash_attention_topk_binding.cpp  kernel_topK_FA2.cu
src/kernels/matmul/: kernel06.cu  kernel1.cu  kernel2.cu  kernel3.cu  kernel4.cu  kernel5.cu  kernel7_cute.cu  test.cu
src/kernels/softmax/: kernel01.cu  kernel02.cu  kernel03.cu  kernel04.cu  kernel05.cu  kernel06.cu
utils/: benchmark.cu  benchmark_softmax.cu  benchmark_topKFA2.py  benchmark_torch.py  get_device_properties.cu
